base-apparel-coming-soon: lot of changes (WIP) - README.md: fixed live site url - js: implemented error message handling - html: added error logo & text - html: made background image & hero image as a div - css: changed to grid instead of flexbox - css: uses background-image to fix background image & hero image overflowing - css: added outline to header__logo when focused for better accessiblity - css: tweaked content's margin & padding - css: made input's border & button's size bigger when the parrent is hovered or focused - css: added styles for error logo & text (obviously) - css: added media queries for tablet & mobile views

--- a/base-apparel-coming-soon/style.css
+++ b/base-apparel-coming-soon/style.css
@@ -5,7 +5,6 @@
     --soft-red: hsl(0, 93%, 68%);
     --dark-grayish-red: hsl(0, 6%, 24%);
 
-    /* 135deg */
     --white-light-pink: hsl(0, 0%, 100%), hsl(0, 100%, 98%);
     --soft-pink-dark-pink: hsl(0, 80%, 86%), hsl(0, 74%, 74%);
 }
@@ -23,27 +22,42 @@ html {
 
 body {
     min-height: 100vh;
-    display: flex;
+    display: grid;
+    grid-template-columns: 4fr 3fr;
+    grid-template-rows: 2fr 8fr;
 }
 
-.main-content {
-    min-height: 100vh;
+.background {
     background: url(./images/bg-pattern-desktop.svg),
         linear-gradient(135deg, var(--white-light-pink));
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 0 23rem 0 15rem;
+    grid-column: 1/2;
+    grid-row: 1/3;
+    z-index: -1;
+    user-select: none;
 }
 
 .header {
-    min-height: 20vh;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    margin-left: 16.5rem;
     display: flex;
     align-items: center;
 }
+.header__logo {
+    user-select: none;
+}
+.header__logo:focus {
+    outline: 2px dashed var(--desaturated-red);
+    outline-offset: 1rem;
+}
 
 .main {
-    height: 80vh;
-    padding-top: 7rem;
+    grid-column: 1/2;
+    grid-row: 2/3;
+    margin: 7rem 0 0 16.5rem;
+    padding-right: 20.8rem;
 }
 
 .main__heading {
@@ -64,13 +78,22 @@ body {
     font-weight: 400;
     color: var(--desaturated-red);
     line-height: 1.8;
-    margin: 2rem 0 2.5rem;
+    margin: 2.5rem 0 4.5rem;
 }
 
 .main__form {
     width: 100%;
     position: relative;
 }
+.main__form:hover > .main__form__input,
+.main__form:focus-within > .main__form__input {
+    box-shadow: 0 0 0 1px var(--desaturated-red);
+}
+.main__form:hover > .main__form__submit,
+.main__form:focus-within > .main__form__submit {
+    transform: scale(1.04);
+}
+
 .main__form__input {
     width: 100%;
     padding: 2rem 11rem 2rem 3rem;
@@ -87,23 +110,181 @@ body {
 .main__form__input::placeholder {
     color: var(--desaturated-red);
 }
-.main__form__input:focus {
-    box-shadow: 0 0 0 1px var(--desaturated-red);
+
+.main__form__error__logo {
+    position: absolute;
+    top: 1.6rem;
+    right: 12rem;
+    pointer-events: none;
+    user-select: none;
+    opacity: 0;
+    transition: opacity 0.3s ease;
 }
+.main__form__error__text {
+    position: absolute;
+    bottom: -1rem;
+    left: 3.2rem;
+    pointer-events: none;
+    user-select: none;
+    opacity: 0;
+    font-size: 1.4rem;
+    color: var(--soft-red);
+    transition: all 0.3s ease;
+}
+
 .main__form__submit {
     position: absolute;
     top: 0;
-    right: -0.1rem;
+    right: 0;
     background: linear-gradient(135deg, var(--soft-pink-dark-pink));
-    padding: 1.7rem 4.5rem;
+    padding: 1.75rem 4.5rem;
     border: 0;
     border-radius: 5rem;
     outline: 0;
     box-shadow: 0 0.8rem 2rem rgba(206, 151, 151, 0.8);
     cursor: pointer;
-    transition: background 0.25s ease, transform 0.3s ease;
+    transition: transform 0.3s ease;
+    user-select: none;
 }
-.main__form__submit:hover {
-    background: hsl(0, 80%, 86%);
-    transform: scale(1.05);
+.main__form__submit:hover,
+.main__form__submit:focus {
+    background: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 80%, 86%));
+}
+
+.main__form:hover > .main__form__input.input--error,
+.main__form:focus-within > .main__form__input.input--error {
+    box-shadow: 0 0 0 1px var(--soft-red);
+}
+.main__form__input.input--error {
+    border-color: var(--soft-red);
+}
+.main__form__input.input--error::placeholder {
+    color: var(--soft-red);
+}
+.main__form__error__logo.logo--error {
+    opacity: 1;
+}
+.main__form__error__text.text--error {
+    opacity: 1;
+    bottom: -2.5rem;
+}
+
+.hero {
+    grid-column: 2/3;
+    grid-row: 1/3;
+    user-select: none;
+}
+.hero__image {
+    height: 100%;
+    width: auto;
+    background: url(./images/hero-desktop.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+@media only screen and (max-height: 700px) {
+    body {
+        grid-template-rows: 1fr 5fr;
+    }
+
+    .main {
+        margin-top: 5rem;
+    }
+}
+@media only screen and (max-height: 630px) {
+    .main {
+        margin-top: 2rem;
+    }
+}
+
+@media only screen and (max-width: 1330px) {
+    .header {
+        margin-left: 10rem;
+    }
+
+    .main {
+        margin-left: 10rem;
+        padding-right: 10rem;
+    }
+}
+@media only screen and (max-width: 945px) {
+    body {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 3fr 6fr;
+    }
+
+    .background {
+        background: linear-gradient(135deg, var(--white-light-pink));
+        grid-column: 1/2;
+        grid-row: 1/4;
+    }
+
+    .main {
+        grid-column: 1/2;
+        grid-row: 3/4;
+        text-align: center;
+        margin: 5rem 10rem 0;
+        padding: 0;
+    }
+
+    .main__heading {
+        font-size: 5rem;
+    }
+
+    .hero {
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+    .hero__image {
+        max-width: 375px;
+        margin: 0 auto;
+        background: url(./images/hero-mobile.jpg);
+        background-repeat: no-repeat;
+    }
+}
+@media only screen and (max-width: 575px) {
+    .header {
+        margin-left: 4rem;
+    }
+    .header__logo:focus {
+        outline: 0;
+    }
+    .header__logo img {
+        height: auto;
+        width: 11rem;
+    }
+
+    .main {
+        margin: 5rem 4rem;
+    }
+
+    .main__heading {
+        font-size: 4rem;
+    }
+    .main__paragraph {
+        margin-top: 1.5rem;
+        margin-bottom: 3.5rem;
+    }
+
+    .main__form__error__logo {
+        right: 10rem;
+    }
+
+    .main__form__submit {
+        padding: 1.75rem 3.5rem;
+    }
+}
+
+@media only screen and (max-width: 460px) {
+    body {
+        overflow-x: hidden;
+    }
+
+    .header {
+        margin-left: 3rem;
+    }
+
+    .main {
+        margin: 5rem 3rem;
+    }
 }
